HMAN-23 Adding files