@@ -1,22 +1,21 @@
 plugins {
   id 'application'
-  id 'checkstyle'
-  id 'pmd'
+  id 'idea'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'org.springframework.boot' version '2.5.3'
   id 'org.owasp.dependencycheck' version '6.2.2'
   id 'com.github.ben-manes.versions' version '0.39.0'
   id 'org.sonarqube' version '3.3'
+  id 'uk.gov.hmcts.java' version '0.12.2'
+  id 'com.github.spacialcircumstances.gradle-cucumber-reporting' version '0.1.23'
 }
 
 group = 'uk.gov.hmcts.reform'
 version = '0.0.1'
 
-allprojects {
-  sourceCompatibility = '11'
-  targetCompatibility = '11'
-}
+sourceCompatibility = 11
+targetCompatibility = 11
 
 sourceSets {
   functionalTest {
@@ -37,13 +36,14 @@ sourceSets {
     resources.srcDir file('src/integrationTest/resources')
   }
 
-  smokeTest {
-    java {
-      compileClasspath += main.output
-      runtimeClasspath += main.output
-      srcDir file('src/smokeTest/java')
+  idea {
+    module {
+      // config to allow Intellij to mark test source and resource files correctly to help linting tools
+      testSourceDirs += project.sourceSets.functionalTest.java.srcDirs
+      testSourceDirs += project.sourceSets.integrationTest.java.srcDirs
+      testResourceDirs += project.sourceSets.functionalTest.resources.srcDirs
+      testResourceDirs += project.sourceSets.integrationTest.resources.srcDirs
     }
-    resources.srcDir file('src/smokeTest/resources')
   }
 }
 
@@ -60,6 +60,7 @@ tasks.withType(Test) {
 }
 
 test {
+  generateCucumberReports.enabled = false
   failFast = true
 }
 
@@ -68,6 +69,40 @@ task functional(type: Test) {
   group = "Verification"
   testClassesDirs = sourceSets.functionalTest.output.classesDirs
   classpath = sourceSets.functionalTest.runtimeClasspath
+
+  generateCucumberReports.enabled = false
+
+  doLast {
+    generateCucumberReports.enabled = true
+
+    javaexec {
+      environment "OAUTH2_CLIENT_SECRET", "DUMMY"
+      main = "uk.gov.hmcts.reform.hmc.hmi.befta.CftHearingServiceBeftaMain"
+      classpath += sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+      args = [
+        '--strict',
+        '--threads', '10',
+        '--plugin', "json:${rootDir}/target/cucumber.json",
+        '--plugin', "junit:${buildDir}/test-results/functional/cucumber.xml",
+        '--tags', 'not @Ignore',
+        '--glue', 'uk.gov.hmcts.befta.player', 'src/functionalTest/resources/features'
+      ]
+      // '--add-opens=...' added to suppress 'WARNING: An illegal reflective access operation has occurred' in uk.gov.hmcts.befta.util.CucumberStepAnnotationUtils
+      jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED' ]
+    }
+  }
+
+  finalizedBy {
+    generateCucumberReports {
+      doLast{
+        delete "${rootDir}/BEFTA Report for Functional Tests/"
+        new File("${rootDir}/BEFTA Report for Functional Tests").mkdirs()
+        file("${rootDir}/target/cucumber/cucumber-html-reports").renameTo(file("${rootDir}/BEFTA Report for Functional Tests"))
+        logger.quiet("Functional test report moved to ---> file://${rootDir}/BEFTA%20Report%20for%20Functional%20Tests/overview-features.html")
+      }
+    }
+  }
+  outputs.upToDateWhen { false }
 }
 
 task integration(type: Test) {
@@ -79,25 +114,61 @@ task integration(type: Test) {
 }
 
 task smoke(type: Test) {
-  description = "Runs Smoke Tests"
-  testClassesDirs = sourceSets.smokeTest.output.classesDirs
-  classpath = sourceSets.smokeTest.runtimeClasspath
+  description = 'Executes smoke tests against an the HMC CFT Hearing Service API instance just deployed'
+  dependsOn functionalTestClasses
+
+  new File("$buildDir/test-results/test").mkdirs()
+  copy {
+    from "src/functional/resources/DummyTest.xml"
+    into "$buildDir/test-results/test"
+  }
+
+  doLast {
+    generateCucumberReports.enabled = true
+    javaexec {
+      environment "OAUTH2_CLIENT_SECRET", "DUMMY"
+      main = "uk.gov.hmcts.reform.hmc.hmi.befta.CftHearingServiceBeftaMain"
+      classpath += sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+      args = [
+        '--strict',
+        '--threads', '10',
+        '--plugin', "json:${rootDir}/target/cucumber.json",
+        '--plugin', "junit:${buildDir}/test-results/functional/cucumber.xml",
+        '--tags', '@Smoke and not @Ignore',
+        '--glue', 'uk.gov.hmcts.befta.player', 'src/functionalTest/resources/features'
+      ]
+      // '--add-opens=...' added to suppress 'WARNING: An illegal reflective access operation has occurred' in uk.gov.hmcts.befta.util.CucumberStepAnnotationUtils
+      jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED' ]
+    }
+  }
+
+  finalizedBy {
+    generateCucumberReports {
+      doLast{
+        delete "${rootDir}/BEFTA Report for Smoke Tests/"
+        new File("${rootDir}/BEFTA Report for Smoke Tests").mkdirs()
+        file("${rootDir}/target/cucumber/cucumber-html-reports").renameTo(file("${rootDir}/BEFTA Report for Smoke Tests"))
+
+        logger.quiet("Smoke test report moved to ---> file://${rootDir}/BEFTA%20Report%20for%20Smoke%20Tests/overview-features.html")
+      }
+    }
+  }
+
+  outputs.upToDateWhen { false }
 }
 
-checkstyle {
-  maxWarnings = 0
-  toolVersion = '8.29'
-  getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
+cucumberReports {
+  outputDir = file("${rootDir}/target/cucumber")
+  reports = files("${rootDir}/target/cucumber.json")
 }
 
-pmd {
-  toolVersion = "6.18.0"
-  sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
-  reportsDir = file("$project.buildDir/reports/pmd")
-  // https://github.com/pmd/pmd/issues/876
-  ruleSets = []
-  ruleSetFiles = files("config/pmd/ruleset.xml")
+task customCleanBeftaReports(type:Delete) {
+  delete "${rootDir}/BEFTA Report for Smoke Tests/"
+  delete "${rootDir}/BEFTA Report for Functional Tests/"
+  delete "${rootDir}/target/cucumber"
+  delete "${rootDir}/target/cucumber.json"
 }
+tasks.clean.dependsOn(tasks.customCleanBeftaReports)
 
 jacocoTestReport {
   executionData(test, integration)
@@ -115,8 +186,22 @@ sonarqube {
     property "sonar.projectName", "Reform :: hmc-cft-hearing-service"
     property "sonar.projectKey", "uk.gov.hmcts.reform:hmc-cft-hearing-service"
     property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
+    property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/hmc/Application.java"
   }
 }
+
+def versions = [
+  junit           : '5.7.2',
+  junitPlatform   : '1.7.2',
+  lombok          : '1.18.8',
+  mapstruct       : '1.4.2.Final',
+  reformLogging   : '5.1.7',
+  springBoot      : springBoot.class.package.implementationVersion,
+  springCloud     : '2020.0.1',
+  springfoxSwagger: '3.0.0',
+  testcontainers  : '1.15.2'
+]
+
 
 // before committing a change, make sure task still works
 dependencyUpdates {
@@ -130,42 +215,46 @@ dependencyUpdates {
   }
 }
 
-// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
 dependencyCheck {
-  // Specifies if the build should be failed if a CVSS score above a specified level is identified.
-  // range of 0-10 fails the build, anything greater and it doesn't fail the build
-  failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
   suppressionFile = 'config/owasp/suppressions.xml'
-
-  analyzers {
-    // Disable scanning of .NET related binaries
-    assemblyEnabled = false
-  }
 }
 
 dependencyManagement {
   dependencies {
-    dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.69'
+    dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.68'
     // CVE-2018-10237 - Unbounded memory allocation
     dependencySet(group: 'com.google.guava', version: '30.1.1-jre') {
       entry 'guava'
     }
+    // Remove once BEFTA rest-assured is updated
+    dependencySet(group: 'io.rest-assured', version: '4.3.0') {
+      entry 'json-path'
+      entry 'xml-path'
+    }
+    dependencySet(group: 'org.apache.tomcat.embed', version: '9.0.43') {
+      entry 'tomcat-embed-core'
+      entry 'tomcat-embed-el'
+      entry 'tomcat-embed-websocket'
+    }
   }
+}
+
+cucumberReports {
+  outputDir = file("${projectDir}/target/cucumber")
+  reports = files("${projectDir}/target/cucumber.json")
+  notFailingStatuses = ["skipped", "passed"]
 }
 
 repositories {
   mavenLocal()
+  jcenter()
+  maven {
+    url "https://jitpack.io"
+  }
   mavenCentral()
   jcenter()
 }
 
-def versions = [
-  junit           : '5.7.2',
-  junitPlatform   : '1.7.2',
-  reformLogging   : '5.1.7',
-  springBoot      : springBoot.class.package.implementationVersion,
-  springfoxSwagger: '3.0.0'
-]
 
 ext.libraries = [
   junit5: [
@@ -182,7 +271,9 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
-
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
   implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
 
   implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
@@ -191,6 +282,8 @@ dependencies {
   compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
   compile group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.14.1'
 
+  implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+  annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
@@ -203,11 +296,11 @@ dependencies {
 
   functionalTestImplementation sourceSets.main.runtimeClasspath
 
-  smokeTestImplementation sourceSets.main.runtimeClasspath
-  smokeTestImplementation sourceSets.test.runtimeClasspath
+  functionalTestImplementation group: 'com.github.hmcts', name: 'befta-fw', version: '6.14.2'
+  functionalTestImplementation libraries.junit5
 }
 
-mainClassName = 'uk.gov.hmcts.reform.uk.gov.hmcts.reform.hmc.Application'
+mainClassName = 'uk.gov.hmcts.reform.hmc.Application'
 
 bootJar {
   getArchiveFileName().set(provider {
